--- a/src/boot.cfg
+++ b/src/boot.cfg
@@ -47,8 +47,8 @@ set devuan_mirror auto.mirror.devuan.org
 set devuan_base_dir devuan
 
 ### Fedora
-set fedora_mirror mirrors.kernel.org
-set fedora_base_dir fedora
+set fedora_mirror dl.fedoraproject.org
+set fedora_base_dir pub/fedora/linux
 
 ### Mageia
 set mageia_mirror mirrors.kernel.org
