Move variable setting to boot.cfg

--- a/src/boot.cfg
+++ b/src/boot.cfg
@@ -52,6 +52,7 @@ set devuan_base_dir devuan
 ### Fedora
 set fedora_mirror dl.fedoraproject.org
 set fedora_base_dir pub/fedora/linux
+iseq ${buildarch} i386 && set fedora_base_dir pub/fedora-secondary ||
 
 ### Mageia
 set mageia_mirror mirrors.kernel.org
